# swagger.json
@@ -7,9 +7,21 @@
   },
   "servers": [
     {
+      "url": "http://localhost:3000"
+    },
+    {
       "url": "https://cse-341-project2-1nop.onrender.com/"
     }
   ],
+  "components": {
+    "securitySchemes": {
+      "githubAuth": {
+        "type": "apiKey",
+        "in": "cookie",
+        "name": "connect.sid"
+      }
+    }
+  },
   "paths": {
     "/books": {
       "get": {
@@ -25,6 +37,11 @@
       },
       "post": {
         "summary": "Create a new book",
+        "security": [
+          {
+            "githubAuth": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -69,6 +86,9 @@
           "400": {
             "description": "Invalid input data"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Server error"
           }
@@ -105,6 +125,11 @@
       },
       "put": {
         "summary": "Update a book",
+        "security": [
+          {
+            "githubAuth": []
+          }
+        ],
         "parameters": [
           {
             "name": "id",
@@ -159,6 +184,9 @@
           "400": {
             "description": "Invalid ID or input data"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Book not found"
           },
@@ -169,6 +197,11 @@
       },
       "delete": {
         "summary": "Delete a book",
+        "security": [
+          {
+            "githubAuth": []
+          }
+        ],
         "parameters": [
           {
             "name": "id",
@@ -185,6 +218,9 @@
           },
           "400": {
             "description": "Invalid book ID"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Book not found"
@@ -209,6 +245,11 @@
       },
       "post": {
         "summary": "Create a new author",
+        "security": [
+          {
+            "githubAuth": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -247,6 +288,9 @@
           "400": {
             "description": "Invalid input data"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Server error"
           }
@@ -283,6 +327,11 @@
       },
       "put": {
         "summary": "Update an author",
+        "security": [
+          {
+            "githubAuth": []
+          }
+        ],
         "parameters": [
           {
             "name": "id",
@@ -331,6 +380,9 @@
           "400": {
             "description": "Invalid ID or input data"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Author not found"
           },
@@ -341,6 +393,11 @@
       },
       "delete": {
         "summary": "Delete an author",
+        "security": [
+          {
+            "githubAuth": []
+          }
+        ],
         "parameters": [
           {
             "name": "id",
@@ -357,6 +414,9 @@
           },
           "400": {
             "description": "Invalid author ID"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Author not found"
